/*
 * @Copyright 2018-2025 HardBackNutter
 * @License GNU General Public License
 *
 * This file is part of NeverTooManyBooks.
 *
 * NeverTooManyBooks is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * NeverTooManyBooks is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
 */
//file:noinspection LongLine

plugins {
    alias libs.plugins.android.application
    alias libs.plugins.android.kotlin
    alias libs.plugins.mannodermaus.junit5
}

/*
    $HOME/.gradle/gradle.properties:
        NeverTooManyBooks.properties=$HOME/blah/blah/NeverTooManyBooks.properties

    $HOME/blah/blah/NeverTooManyBooks.properties:
        sign.storeFile=$HOME/blah/blah/keystore.jks
        sign.storePassword=MyStorePassword
        sign.keyAlias=MyKeyAlias
        sign.keyPassword=MyKeyPassword

 */
final def props = new Properties()
if (project.hasProperty("NeverTooManyBooks.properties")) {
    final def file = new File(project.property("NeverTooManyBooks.properties"))
    if (file.exists()) {
        props.load(new FileInputStream(file))
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(rootProject.ext.toolChain)
    }
}

kotlin {
    jvmToolchain rootProject.ext.toolChain
}

android {
    namespace = "com.hardbacknutter.nevertoomanybooks"
    compileSdk = rootProject.ext.compileSdkVersion

    signingConfigs {
        release {
            storeFile = file(props["sign.storeFile"])
            storePassword = props["sign.storePassword"]
            keyAlias = props["sign.keyAlias"]
            keyPassword = props["sign.keyPassword"]
        }
    }

    defaultConfig {
        applicationId = rootProject.ext.applicationId
        versionCode = rootProject.ext.applicationVersionCode
        versionName = rootProject.ext.applicationVersionName

        minSdk = rootProject.ext.minSdkVersion
        targetSdk = rootProject.ext.targetSdkVersion

        // NEWTHINGS: add app language: add the string res file. No other app changes needed.
        def supportedLocales = [
                "cs", "de", "el", "en", "en_GB", "es", "fr", "gl", "hu", "it", "nl",
                "pl", "pt", "pt_BR", "ru", "sk", "ta", "tr", "vi",
                "zh_CN", "zh_TW"]
        resourceConfigurations += supportedLocales

        buildConfigField("String[]", "SUPPORTED_LOCALES",
                "new String[]{\"" + supportedLocales.join("\",\"") + "\"}")

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments["runnerBuilder"] =
                "de.mannodermaus.junit5.AndroidJUnit5Builder"

        // Under development; disabled for release builds in buildTypes.release
        buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
        buildConfigField("boolean", "ENABLE_LIBRARYTHING", "true")

        buildConfigField("boolean", "ENABLE_ISFDB_LOGIN", "true")
        buildConfigField("boolean", "ENABLE_OPEN_LIBRARY_LOGIN", "true")
        buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "true")

        buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "true")
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true

            signingConfig = signingConfigs.release

            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"),
                    "proguard-rules.pro")

            resValue("string", "searchSuggestAuthority",
                    "${defaultConfig.applicationId}.SearchSuggestionProvider")
            resValue("string", "fileProviderAuthority",
                    "${defaultConfig.applicationId}.GenericFileProvider")

            // under development
            buildConfigField("boolean", "ENABLE_BOOKFINDER", "false")
            buildConfigField("boolean", "ENABLE_LIBRARYTHING", "false")

            buildConfigField("boolean", "ENABLE_ISFDB_LOGIN", "false")
            buildConfigField("boolean", "ENABLE_OPEN_LIBRARY_LOGIN", "false")
            buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "false")

            buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
        }
        beta {
            initWith(release)

            versionNameSuffix = "-beta"
            // applicationIdSuffix: same as release to be able to update rel->beta

            resValue("string", "searchSuggestAuthority",
                    "${defaultConfig.applicationId}.SearchSuggestionProvider.beta")
            resValue("string", "fileProviderAuthority",
                    "${defaultConfig.applicationId}.GenericFileProvider.beta")
        }
        debug {
            debuggable = true
            versionNameSuffix = "-debug"
            applicationIdSuffix = ".debug"

            resValue("string", "searchSuggestAuthority",
                    "${defaultConfig.applicationId}.SearchSuggestionProvider.debug")
            resValue("string", "fileProviderAuthority",
                    "${defaultConfig.applicationId}.GenericFileProvider.debug")
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11

        // https://developer.android.com/studio/releases/#4-0-0-desugar
        coreLibraryDesugaringEnabled = true
    }

    kotlinOptions {
        jvmTarget = 11
    }

    buildFeatures {
        viewBinding = true
        buildConfig = true
        resValues = true
    }

    // ENHANCE: https://developer.android.com/guide/topics/resources/app-languages#auto-localeconfig
    //    android {
    //        androidResources {
    //            generateLocaleConfig = true
    //        }
    //    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            // Can be enabled to make Log.x work. OR, use Logger.x
            returnDefaultValues = false
            all {
                reports {
                    junitXml.getRequired().set(true)
                    html.getRequired().set(false)
                }
            }
        }
    }

    packagingOptions {
        resources {
            excludes += ["META-INF/LICENSE",
                         "META-INF/LICENSE.md",
                         "META-INF/LICENSE.txt",
                         "META-INF/license.txt",
                         "META-INF/LICENSE-notice.md",
                         "META-INF/NOTICE",
                         "META-INF/NOTICE.txt",
                         "META-INF/notice.txt",
                         "META-INF/ASL2.0",
                         "META-INF/DEPENDENCIES",
                         "META-INF/README.md",
                         "META-INF/CHANGES"]
        }
    }

    lint {
        // allow command line builds to complete
        abortOnError = false
    }

    // https://developer.android.com/build/dependencies#dependency-info-play
    dependenciesInfo {
        // Disables dependency metadata when building APKs.
        includeInApk = false
        // Disables dependency metadata when building Android App Bundles.
        includeInBundle = false
    }

    applicationVariants.configureEach {
        final variant ->
            variant.outputs.configureEach {
                outputFileName = "${rootProject.name}-${defaultConfig.versionName}-${variant.name}.apk"
            }
    }

    // This configuration specifies how an app bundle should be split
    // in terms of language, density and cpu architecture (abi).
    // The default values are true. This means a split will be generated.
    bundle {
        language {
            enableSplit = false
        }
//        density {
//            enableSplit = true
//        }
//        abi {
//            enableSplit = true
//        }
    }
}

dependencies {
    implementation project(path: ":core")
    implementation project(path: ":fastscroller")
    implementation project(path: ":zratingbar")
    implementation project(path: ":Insets")
    implementation project(path: ":Logger")
    implementation project(path: ":repacked-org-json")

    coreLibraryDesugaring(libs.google.desugar)

    implementation(libs.androidx.activity)
    implementation(libs.androidx.annotation)
    implementation(libs.androidx.appcompat)
    implementation(libs.androidx.camera.camera2)
    implementation(libs.androidx.camera.core)
    implementation(libs.androidx.camera.lifecycle)
    implementation(libs.androidx.camera.view)
    implementation(libs.androidx.cardview)
    implementation(libs.androidx.collection)
    implementation(libs.androidx.constraintlayout.core)
    implementation(libs.androidx.constraintlayout)
    implementation(libs.androidx.coordinatorlayout)
    implementation(libs.androidx.core)
    implementation(libs.androidx.core.splashscreen)
    implementation(libs.androidx.customview)
    implementation(libs.androidx.documentfile)
    implementation(libs.androidx.drawerlayout)
    implementation(libs.androidx.exifinterface)
    implementation(libs.androidx.fragment)
    implementation(libs.androidx.lifecycle.livedata)
    implementation(libs.androidx.lifecycle.viewmodel)
    implementation(libs.androidx.preference)
    implementation(libs.androidx.recyclerview)
    implementation(libs.androidx.viewpager2)
    implementation(libs.androidx.window)

    implementation(libs.google.material)

    implementation(libs.jsoup)

    // CameraX based scanner code from "TinyZXingWrapper"
    releaseImplementation(libs.hardbacknutter.tinyzxingwrapper) {
        artifact {
            classifier = "release"
            type = "aar"
        }
    }
    betaImplementation(libs.hardbacknutter.tinyzxingwrapper) {
        artifact {
            classifier = "release"
            type = "aar"
        }
    }
    debugImplementation(libs.hardbacknutter.tinyzxingwrapper) {
        artifact {
            classifier = "debug"
            type = "aar"
        }
    }

    implementation(libs.zxing.core)

    implementation(libs.acra.core)
    implementation(libs.acra.dialog)

    implementation(libs.kotlinx.coroutines.android)

    testImplementation(libs.mockito.core)
    testImplementation(libs.mockito.junit.jupiter)

    testRuntimeOnly(libs.junit.jupiter.engine)
    testImplementation(libs.junit.jupiter.api)
    testImplementation(libs.junit.jupiter.params)

    androidTestImplementation(libs.junit.jupiter.api)
    androidTestImplementation(libs.mannodermaus.android.test.core)
    androidTestRuntimeOnly(libs.mannodermaus.android.test.runner)

    androidTestImplementation(libs.androidx.test.core)
    androidTestImplementation(libs.androidx.test.runner)
    androidTestImplementation(libs.androidx.test.rules)

    androidTestImplementation(libs.androidx.arch.core.testing)
}
